--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <meta property="og:site_name" content="">
     <meta property="og:locale" content="en-US">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title></title>
+    <title>AAO - Schedule 4P Clan Mathces</title>
   </head>
   <body class="">
     <noscript>
